# locus

./: .gitignore  Cargo.toml  Cross.toml  README.md  evals.md  install.sh
.github/workflows/: pages.yml  release.yml
docs/: index.html
src/: chunker.rs  cli.rs  embeddings.rs  eval.rs  evalgen.rs  indexer.rs  lib.rs  main.rs  mcp.rs  model.rs  output.rs  progress.rs  query.rs  repo_meta.rs  reranker.rs  search.rs  tui.rs
